--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Application for learning React"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Homework 00</title>
+    <title>Sandbox</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
